force-app/main/default/objects/PDRI__Deployment_Record_Result__c/fields/PDRI__Batch_Operation__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Batch_Operation__c</fullName>
    <formula>TEXT( PDRI__Deployment_Batch_Result__r.PDRI__Operation__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Batch Operation</label>
    <type>Text</type>
</CustomField>