force-app/main/default/objects/PDRI__Deployment_Record_Result__c/fields/PDRI__Deployment_Batch_Result__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Deployment_Batch_Result__c</fullName>
    <label>Deployment Batch Result</label>
    <referenceTo>PDRI__Deployment_Batch_Result__c</referenceTo>
    <relationshipLabel>Deployment Record Results</relationshipLabel>
    <relationshipName>Deployment_Record_Results</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>