force-app/main/default/objects/PDRI__Deployment_Record_Result__c/fields/PDRI__Destination_VCS_Repo_Folder_Path__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Destination_VCS_Repo_Folder_Path__c</fullName>
    <label>Destination VCS Repo Folder Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>