force-app/main/default/objects/PDRI__Deployment_Record_Result__c/fields/PDRI__Source_Last_Modified_By_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Source_Last_Modified_By_Full_Name__c</fullName>
    <label>Source Last Modified By Full Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>