force-app/main/default/objects/PDRI__Deployment_Record_Result__c/fields/PDRI__Source_Last_Modified_By_Username__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Source_Last_Modified_By_Username__c</fullName>
    <label>Source Last Modified By Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>