force-app/main/default/objects/PDRI__Deployment_Record_Result__c/fields/PDRI__Source_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Source_Record_ID__c</fullName>
    <label>Source Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>