force-app/main/default/objects/PDRI__Deployment_Record_Result__c/fields/PDRI__Source_Record_Name__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Source_Record_Name__c</fullName>
    <label>Source Record Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>