force-app/main/default/objects/PDRI__Deployment_Record_Result__c/fields/PDRI__Source_Record_URL__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Source_Record_URL__c</fullName>
    <label>Source Record URL</label>
    <type>Url</type>
</CustomField>