force-app/main/default/objects/PDRI__Deployment_Record_Result__c/fields/PDRI__Success__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Success__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Success</label>
    <type>Checkbox</type>
</CustomField>